RESOLVED FIXED141333
REGRESSION(r179705): [GTK] The Web Inspector doesn't work after r179705
https://bugs.webkit.org/show_bug.cgi?id=141333
Summary REGRESSION(r179705): [GTK] The Web Inspector doesn't work after r179705
Carlos Garcia Campos
Reported 2015-02-06 08:53:23 PST
The unit tests are timing out and the inspector doesn't show up in MiniBrowser either. It seems that after r179705 the initial attach message is never received in the UI process.
Attachments
Patch (2.24 KB, patch)
2015-02-08 04:23 PST, Carlos Garcia Campos
zan: review+
Brian Burg
Comment 1 2015-02-06 10:05:38 PST
The following code was moved out of the static PageGroup management code. It was re-added in a platform-specific way for PLATFORM(MAC), so maybe it has to be re-added to GTK/EFL when the PageGroup is constructed. (On Mac, Inspector now uses WKWebView which only takes the group identifier. So we first construct the view, then adjust prefs, then do the initial load.) #ifndef NDEBUG // Allow developers to inspect the Web Inspector in debug builds without changing settings. pageGroup->preferences().setDeveloperExtrasEnabled(true); pageGroup->preferences().setLogsPageMessagesToSystemConsoleEnabled(true); #endif pageGroup->preferences().setAllowFileAccessFromFileURLs(true);
Carlos Garcia Campos
Comment 2 2015-02-08 04:23:02 PST
Yes, that was it, thanks!
Carlos Garcia Campos
Comment 3 2015-02-08 04:23:25 PST
Carlos Garcia Campos
Comment 4 2015-02-09 00:02:46 PST
Note You need to log in before you can comment on or make changes to this bug.