REGRESSION(r179705): [GTK] The Web Inspector doesn't work after r179705 https://bugs.webkit.org/show_bug.cgi?id=141333

Reviewed by Žan Doberšek.

Create an initialize WebPreferences for the inspector page. This
was moved from cross-platform code to platform specific code.

* UIProcess/gtk/WebInspectorProxyGtk.cpp:
(WebKit::WebInspectorProxy::platformCreateInspectorPage):

Canonical link: https://commits.webkit.org/159428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179821 268f45cc-cd09-0410-ab3c-d52691b4dbfc